@@ -9,7 +9,12 @@ import org.testng.TestNGException;
 import org.testng.internal.ITestResultNotifier;
 import org.testng.internal.Utils;
 
-/** An abstraction interface over JUnit test runners. */
+/**
+ * An abstraction interface over JUnit test runners.
+ *
+ * @deprecated - Support for running JUnit tests stands deprecated as of TestNG <code>7.6.2</code>
+ */
+@Deprecated
 public interface IJUnitTestRunner {
 
   void setInvokedMethodListeners(Collection<IInvokedMethodListener> listener);
