@@ -2,7 +2,10 @@ package org.testng.junit;
 
 import junit.framework.Test;
 
-/** @author lukas */
+/**
+ * @deprecated - Support for running JUnit tests stands deprecated as of TestNG <code>7.6.2</code>
+ */
+@Deprecated
 public class JUnit3TestClass extends JUnitTestClass {
 
   public JUnit3TestClass(Test test) {
