@@ -3,6 +3,10 @@ package org.testng.junit;
 import java.lang.reflect.Method;
 import org.testng.internal.ConstructorOrMethod;
 
+/**
+ * @deprecated - Support for running JUnit tests stands deprecated as of TestNG <code>7.6.2</code>
+ */
+@Deprecated
 public class JUnit4ConfigurationMethod extends ConstructorOrMethod {
 
   private final Class<?> declaringClass;
